--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "code-mirror-cast",
   "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "dev": "concurrently \"pnpm --filter sync-server dev\" \"pnpm --filter sync-client dev\"",
-    "dev-frontend": "pnpm --filter frontend run dev", 
-    "build-frontend": "pnpm --filter frontend build-and-copy"
+    "dev-frontend": "npm run dev --workspace frontend",
+    "build-frontend": "npm run build-and-copy --workspace frontend"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "shx": "^0.4.0"
   }
 }
